# napari-wormtracer

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: test_and_deploy.yml
src/napari_wormtracer/: __init__.py  _widget.py  _widget.pyi  napari.yaml
